Update multiple files including .env

--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,11 @@
+#https://passwords-generator.org/32-character
+JWT_SECRET=IIIIllllll11111
 PORT=4000
-JWT_SECRET=my-super-secret-key
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
 DB_PASS=1234
 DB_NAME=jamtori
+
+PASSWORD_SALT=1231
+PASSWORD_ROUNDS=1231
