--- a/nginx.conf
+++ b/nginx.conf
@@ -22,11 +22,38 @@ http {
     # 업로드 파일 크기 제한 (100MB까지 허용)
     client_max_body_size 100m;
     
+    # ========================================
+    # 성능 최적화 옵션 (http 블록 레벨)
+    # ========================================
+    
+    # gzip 압축 활성화 (대역폭 절약)
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1000;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/javascript
+        application/xml+rss
+        application/json;
+    
     # 메인 서버 블록
     server {
         # 80포트에서 수신
         listen       80;
         server_name  localhost;
+        
+        # ========================================
+        # 정적 파일 캐싱 설정 (✅ server 블록 안으로 이동)
+        # ========================================
+        location ~* \.(css|js|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
+            root   C:/test/test/client/dist;
+            expires 1y;  # 1년 캐싱
+            add_header Cache-Control "public, immutable";
+            add_header Vary Accept-Encoding;
+        }
         
         # ========================================
         # 클라이언트 정적 파일 서빙 (React 앱)
@@ -52,11 +79,6 @@ http {
             proxy_set_header X-Real-IP $remote_addr;        # 실제 클라이언트 IP
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  # 프록시 체인 IP
             proxy_set_header X-Forwarded-Proto $scheme;     # HTTP/HTTPS 프로토콜
-            
-            # ⚠️ CORS 헤더 제거 (Express에서 처리하므로 중복 방지)
-            # proxy_set_header Access-Control-Allow-Origin *;
-            # proxy_set_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
-            # proxy_set_header Access-Control-Allow-Headers "Content-Type, Authorization";
         }
         
         # ========================================
@@ -80,33 +102,8 @@ http {
         location = /50x.html {
             root   html;  # C:\nginx\html\50x.html 파일 사용
         }
-    }
-    
-    # ========================================
-    # 성능 최적화 옵션 (선택사항)
-    # ========================================
-    
-    # gzip 압축 활성화 (대역폭 절약)
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1000;
-    gzip_types
-        text/plain
-        text/css
-        text/xml
-        text/javascript
-        application/javascript
-        application/xml+rss
-        application/json;
-    
-    # 정적 파일 캐싱 설정
-    location ~* \.(css|js|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        root   C:/test/test/client/dist;
-        expires 1y;  # 1년 캐싱
-        add_header Cache-Control "public, immutable";
-        add_header Vary Accept-Encoding;
-    }
-}
+    } # ✅ server 블록 종료
+} # ✅ http 블록 종료
 
 # ========================================
 # 설정 설명
